--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 	<title>welcome</title>
 	<meta name="viewport" content="width=200px">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1 style="color:red">welcome to my site</h1>
+<h1>welcome to my site</h1>
 
 <p>The width property controls the size of the viewport. It can be set to a specific number of pixels like width=600 or to the special value device-width value which is the width of the screen in CSS pixels at a scale of 100%. (There are corresponding height and device-height values, which may be useful for pages with elements that change size or position based on the viewport height.)
 
